[DEV-1996] Add hacky fixes for collapse dropdown and search dropdown.

--- a/askbot/skins/rover_skin/media/css/override.css
+++ b/askbot/skins/rover_skin/media/css/override.css
@@ -76,3 +76,12 @@ body {
     display: none;
   }
 }
+
+.question-page .navbar-collapse:not(.collapse) {
+  height: auto !important;
+}
+
+#searchForm {
+  margin-bottom: 400px;
+}
+
